@@ -1,0 +1,17 @@
+\name{Reuters21578Document-class}
+\docType{class}
+\alias{Reuters21578Document-class}
+\title{Text document}
+\description{
+  A class representing a Reuters21578 XML text document with additional
+  information. The XML document itself is represented by inherting from
+  \code{XMLTextDocument}.
+}
+\section{Objects from the Class}{
+Objects can be created by calls of the form \code{new("Reuters21578Document", ...)}.
+}
+\section{Extends}{
+Class \code{XMLTextDocument}, directly.
+}
+\author{Ingo Feinerer}
+\keyword{classes}
