@@ -1,3 +1,8 @@
+2007-06-07  Ingo Feinerer  <h0125130@wu-wien.ac.at>
+
+	* R/aobjects.R: Added classes for Reuters21578 XML and RCV1
+	documents. This simplifies some functions, e.g., asPlain.
+
 2007-06-06  Ingo Feinerer  <h0125130@wu-wien.ac.at>
 
 	* inst/doc/tm.Rnw: Fixed some typos in vignette.
